# algorithm-engineering

./: README.md
answers/lecture_1/: report.md
answers/lecture_1/code/: generated.cpp  hello.cpp  hello_simple.cpp  pi_monte_carlo.cpp  pi_numerical_integration.cpp  pi_openmp_v1.cpp  pi_openmp_v2.cpp
answers/lecture_10/: report.md
answers/lecture_11/: report.md
answers/lecture_12/: report.md
answers/lecture_2/: report.md
answers/lecture_2/code/: fixed_race_condition  fixed_race_condition.cpp  fixed_unbalanced_workload.cpp  pi_numerical_integration.cpp  unbalanced_workload.cpp
answers/lecture_3/: report.md
answers/lecture_3/code/: pi_monte_carlo_better_rng.cpp  pi_monte_carlo_modified.cpp  pi_monte_carlo_original.cpp  pi_monte_carlo_reduction.cpp  pi_numerical_integration_original.cpp  pi_numerical_integration_parallelized.cpp
answers/lecture_4/: report.md
answers/lecture_4/code/: graphs.py  min_max_quicksort_array_sizes.cpp  min_max_quicksort_threads.cpp
answers/lecture_5/: report.md
answers/lecture_5/code/quantpng/: CMakeLists.txt  Makefile  main.cpp
answers/lecture_5/code/quantpng/lodepng/: CMakeLists.txt  lodepng.cpp  lodepng.h
answers/lecture_5/code/quantpng/quantize/: CMakeLists.txt  kmeans.c  libimagequant.c  mediancut.c
answers/lecture_5/code/test_fizzbuzz/: CMakeLists.txt  catch_tests_fizzbuzz.cpp
answers/lecture_5/code/test_fizzbuzz/catch/: CMakeLists.txt
answers/lecture_6/: report.md
answers/lecture_7/: report.md  task2.xlsx
answers/lecture_8/: report.md
answers/lecture_9/: report.md
(+3 files in other folders)
